--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "flexboxgrid": "^6.3.1",
     "vue": "^2.5.11",
+    "vue-click-outside": "^1.0.7",
     "vuex": "^3.0.1"
   },
   "browserslist": [
