--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "bootstrap-4-grid": "^2.3.0",
     "vue": "^2.5.11",
     "vue-click-outside": "^1.0.7",
     "vuex": "^3.0.1"
